--- a/7prac/7prac.csproj
+++ b/7prac/7prac.csproj
@@ -44,6 +44,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Lesson.cs" />
+    <Compile Include="Program9.cs" />
+    <Compile Include="Program8.cs" />
     <Compile Include="Program7.cs" />
     <Compile Include="Program6.cs" />
     <Compile Include="Program5.cs" />
